[B] Fix resource mapping button styles/padding
Closes #953

Also Truncate overlong column titles in mapping UI

--- a/client/src/theme/Components/global/forms/_form-inputs-primary.scss
+++ b/client/src/theme/Components/global/forms/_form-inputs-primary.scss
@@ -388,6 +388,19 @@
 
   .column-mappable {
     width: 100%;
+    flex-grow: 1;
+
+    @include respond($break80) {
+      width: calc(100% - 28vw);
+    }
+
+    @include respond($break85) {
+      width: calc(100% - 29vw);
+    }
+
+    @include respond($break110) {
+      width: calc(100% - 360px);
+    }
   }
 
   // Group of draggable, available columns
@@ -565,10 +578,9 @@
     position: absolute;
     top: 50%;
     right: 7px;
-    width: 19px;
-    height: 19px;
-    padding-top: 2px; // NP
-    margin-top: -8px;
+    width: 20px;
+    height: 20px;
+    margin-top: -9px;
     font-size: 8px;
     color: $neutralWhite;
     visibility: hidden;
@@ -578,9 +590,8 @@
     transition: opacity $duration $timing,
       visibility $duration $timing;
 
-    & .manicon-x-bold {
-      position: relative;
-      left: 1px;
+    @include respond($break90) {
+      padding-top: 2px; // NP
     }
 
     &:hover {
@@ -615,10 +626,15 @@
     padding: 0.6em 0.8em;
     font-weight: $semibold;
     color: $neutral90;
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     background-color: $neutral20;
     transition: background-color $duration $timing;
+
+    .matched & {
+      padding-right: 40px;
+    }
   }
 
   &:hover {
